Closed
Bug 1623703
Opened 5 years ago
Closed 5 years ago
comm/mailnews/compose/src/nsMsgCompose.cpp(4409,73): error: too many arguments to function call, expected 2, have 3
Categories
(Thunderbird :: General, defect)
Thunderbird
General
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 76.0
People
(Reporter: Paenglab, Assigned: Paenglab)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
4.38 KB,
patch
|
mkmelin
:
review+
|
Details | Diff | Splinter Review |
We need to port bug 1623222.
| Assignee | ||
Comment 1•5 years ago
|
||
Assignee: nobody → richard.marti
Status: NEW → ASSIGNED
Attachment #9134488 -
Flags: review?(mkmelin+mozilla)
Comment 3•5 years ago
|
||
Bug 1623453 didn't get attention. How can I notify Thunderbird developers of breaking changes?
Flags: needinfo?(richard.marti)
Comment 5•5 years ago
|
||
Comment on attachment 9134488 [details] [diff] [review]
1623703-unEscapeURIForUI.patch
Review of attachment 9134488 [details] [diff] [review]:
-----------------------------------------------------------------
Thx Richard, I'll go ahead and land!
emk: thanks for filing, sorry we didn't see it in time!
Attachment #9134488 -
Flags: review?(mkmelin+mozilla) → review+
Updated•5 years ago
|
Target Milestone: --- → Thunderbird 76.0
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/8580290d7833
Port bug 1623222: Remove the charset parameter from nsITextToSubURI::UnEscapeURIForUI. r=mkmelin
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Updated•5 years ago
|
Keywords: regression
You need to log in
before you can comment on or make changes to this bug.
Description
•