Bug 1623703 - Port bug 1623222: Remove the charset parameter from nsITextToSubURI::UnEscapeURIForUI. r=mkmelin