mail/base/content/mailWindow.js
@@ -309,7 +309,7 @@ nsMsgStatusFeedback.prototype = {
    */
   setOverLink(url, anchorElt) {
     if (url) {
-      url = Services.textToSubURI.unEscapeURIForUI("UTF-8", url);
+      url = Services.textToSubURI.unEscapeURIForUI(url);
 
       // Encode bidirectional formatting characters.
       // (RFC 3987 sections 3.2 and 4.1 paragraph 6)
