mail/base/content/nsContextMenu.js
@@ -867,11 +867,7 @@ nsContextMenu.prototype = {
 
     // Let's try to unescape it using a character set.
     try {
-      var characterSet = this.target.ownerDocument.characterSet;
-      addresses = Services.textToSubURI.unEscapeURIForUI(
-        characterSet,
-        addresses
-      );
+      addresses = Services.textToSubURI.unEscapeURIForUI(addresses);
     } catch (ex) {
       // Do nothing.
     }
